--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bookstore",
   "version": "1.0.0",
   "main": "backend/server.js",
+  "engines": {"node": "18.x"},
   "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
